[package]
name = "signum"
version = "0.1.0"
edition = "2021"
authors = ["Graham Fielding <gfielding26@scarsdaleschools.org>"]
description = "Adds the signum function to Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mangopanda455/signum"
documentation = "https://docs.rs/signum"
homepage = "https://github.com/mangopanda455/signum"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
